fix: width & p align

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ div#extra {
     box-shadow: 1px 1px 1px 1px #00000017;
     padding: 10px;
     max-width: 1000px;
-    min-width: 375px;
+    min-width: 385px;
 }
 
 div {
@@ -149,7 +149,7 @@ div {
     box-shadow: 1px 1px 1px 1px #00000017;
     padding: 10px;
     max-width: 1000px;
-    min-width: 375px;
+    min-width: 385px;
 }
 
 div#video {
@@ -157,7 +157,7 @@ div#video {
     box-shadow: 1px 1px 1px 1px #00000017;
     padding: 10px;
     max-width: 1000px;
-    min-width: 375px;
+    min-width: 385px;
     text-align: center;
     background-color: #1a5c38;
     position: relative;
@@ -213,4 +213,9 @@ div a::after {
 
 div#extra a::after {
     content: '\1f517';
+}
+
+.pextra {
+    text-align: center;
+    padding: 10px;
 }
